# edge-computing

./: .angulardoc.json  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  edge-flows_arm64.yml  edge-gateway.yml  edge-gateway_arm.yml  edge-gateway_arm64.yml  myhelloworld_arm64.yml  security.yml  security_arm.yml  security_arm64.yml
docs/: SmartThingsArchitecture.drawio  docker-publish.yml
docs/setup/: wpa_supplicant.conf
horizon/agent/: agent-install.cfg
horizon/hub/: Dockerfile
modules/edge-sx127x/: .npmignore  API.md  package-lock.json  package.json
scripts/run/: docker-compose.yml  init-mongo.sh  installNrun.sh
scripts/simulate/: attributes-demo.js  package-lock.json  package.json
services/: README.md
services/detection/: 2.Dockerfile  Dockerfile  README.md  arm32v7.Dockerfile  main.py  old.Dockerfile  requirements.txt  setup.sh  time-lapse.py
services/edge-gateway/: .dockerignore  Dockerfile  Dockerfile.alpine  README.md  docker_build.sh  package-lock.json  (+2 more)
services/inference/: .dockerignore  Dockerfile  Dockerfile.amd64  Dockerfile.arm  Dockerfile.arm64  Dockerfile.bazel  README.md
services/inference/app/: .dockerignore  index.js  package-lock.json  package.json  picam.js  setup.sh
services/inference/app/assets/models/model1/variables/: variables.index
services/inference/app/handlers/: classify.js  notification.js  raspicam.js  ruleEngine.js  webcam.js
services/inference/app/scripts/: custom-binary.json
services/inference/horizon/: deployment.policy.json  hzn.json  service.definition.json
(+122 files in other folders)
