ARG UBUNTU_VERSION=18.04

FROM arm64v8/ubuntu:${UBUNTU_VERSION} AS base

RUN apt-get update && \
    DEBIAN_FRONTEND=noninteractive TZ=America/Los_Angeles apt-get install -y \
        build-essential \
        curl \
        git \
        openjdk-8-jdk \
        zip \
        unzip \
        python3

# Some TF tools expect a "python" binary
RUN ln -s $(which python3) /usr/local/bin/python

# Build and install bazel
ENV BAZEL_VERSION 3.1.0
WORKDIR /
RUN mkdir /bazel && \
    cd /bazel && \
    curl -fSsL -O https://github.com/bazelbuild/bazel/releases/download/$BAZEL_VERSION/bazel-$BAZEL_VERSION-dist.zip && \
    unzip bazel-$BAZEL_VERSION-dist.zip && \
    bash ./compile.sh && \
    cp output/bazel /usr/local/bin/ && \
    rm -rf /bazel && \
    cd -